--- a/ButtonClicker/index.html
+++ b/ButtonClicker/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="navBar">
         <h1>Dojonary</h1>
-        <input type="text" name="Search" id="search">
+        <input type="text" name="Search" id="search" placeholder="Search">
         <button id="login" onclick="signOut(this)">Login</button>
     </div>
     <div class="container">
